# NASA-RMC-2018-2019

./: .clang-format  .gitignore  CMakeLists.txt  Pipfile  README.md  code_status.md  package.xml  publisher.cpp  subscriber.cpp
.github/ISSUE_TEMPLATE/: feature_request.md
can_bus_interface/: CMakeLists.txt
codebase/catkin_ws/src/custom_msgs/: CMakeLists.txt
codebase/catkin_ws/src/simple_example/: CMakeLists.txt  package.xml
codebase/catkin_ws/src/simple_example/src/: simple_example_v1.cpp
custom_msgs/: package.xml
custom_msgs/msg/: DriveMotorSpeeds.msg
dig_system/: CMakeLists.txt  package.xml
dig_system/scripts/: dig_motor_controller.py
drive_system/: CMakeLists.txt  package.xml
drive_system/scripts/: drive_motor_controller.py  test_node.py
high_level_control/: CMakeLists.txt  package.xml
high_level_control/scripts/: teleop_control.py
mission_control/: CMakeLists.txt  package.xml
mission_control/resources/css/: cc.css
mission_control/resources/html/: cc.html
mission_control/scripts/: generate_images.py  test_webpage.py
motor_control/: CMakeLists.txt  LICENSE  README.md  example.cpp  package.xml
motor_control/cfg/: Talon.cfg
motor_control/include/ctre/phoenix/: CANifier.h  CANifierControlFrame.h  CANifierFaults.h  CANifierStatusFrame.h
motor_control/include/ctre/phoenix/LowLevel/: MotControllerWithBuffer_LowLevel.h
motor_control/include/ctre/phoenix/Motion/: TrajectoryPoint.h
motor_control/include/ctre/phoenix/MotorControl/: DemandType.h  DeviceCatalog.h  Faults.h  FeedbackDevice.h  FollowerType.h  GroupMotorControllers.h  IFollower.h  IMotorController.h  LimitSwitchType.h  SensorCollection.h  StatusFrame.h  StickyFaults.h  VelocityMeasPeriod.h
motor_control/include/ctre/phoenix/MotorControl/CAN/: BaseMotorController.h  TalonSRX.h  VictorSPX.h  WPI_VictorSPX.h
motor_control/include/ctre/phoenix/Sensors/: PigeonIMU_Faults.h  PigeonIMU_StatusFrame.h  PigeonIMU_StickyFaults.h
motor_control/include/ctre/phoenix/Signals/: MovingAverage.h
motor_control/include/motor_control/: TalonNode.h
motor_control/launch/: example.launch  example.yaml
motor_control/src/: MotorControl.cpp  TalonNode.cpp  VictorNode.cpp  can_bus_interface.cpp  example.cpp
robot_data_collection/: CMakeLists.txt  package.xml
robot_data_collection/scripts/: data_collector.py
robot_digging/: CMakeLists.txt  package.xml
robot_high_level_control/: CMakeLists.txt  package.xml
robot_high_level_control/scripts/: state_machine.py
robot_launch/: CMakeLists.txt  package.xml
robot_launch/launch/: README.md  kinetic-elevation-test.launch  teleop_control.launch
robot_launch/scripts/: static_transforms.json  transforms.py
robot_misc_tools/: CMakeLists.txt  package.xml
robot_misc_tools/scripts/: static_transforms.json  transform_publisher.py  transforms.py  transforms_dynamic.py  transforms_static.py  update_publisher.py
robot_mission_control/: CMakeLists.txt  package.xml  rqt_ui.perspective
robot_mission_control/launch/: aruco_board_params.yaml  full_system.launch  localization.launch  teleop_control.launch
robot_mission_control/scripts/: teleop_control.py  test_webpage.py
robot_motor_control/: CMakeLists.txt  package.xml
robot_motor_control/cfg/: Talon.cfg
robot_motor_control/include/robot_motor_control/: TalonNode.h
robot_motor_control/launch/: example.launch  example.yaml  full_system.yaml
robot_motor_control/scripts/: camera_motor_control.py  digging_control.py  motor_speed_summary.py
robot_motor_control/src/: CmdExmaple.cpp  MotorControl.cpp  TalonNode.cpp  camera_motor_control.py
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/launch/: global_planner.launch
robot_navigation/resources/: create_grid_img.py  empty_arena.yaml
robot_navigation/scripts/: drive_motor_controller.py  drive_speed_conversion.py  path_planning.py  path_planning_tools.py  pure_pursuit.py  test_node.py
robot_rqt_plugin/: CMakeLists.txt  package.xml  plugin.xml  setup.py
robot_rqt_plugin/resource/: MyPlugin.ui
robot_rqt_plugin/scripts/: robot_rqt_plugin
robot_sensors/: CMakeLists.txt  package.xml
robot_sensors/cameras/: image_publisher.py  stereo_publisher.py
robot_sensors/cameras/camera_calibration/: calibration_stereo.py  capture_images.py  capture_stereo.py
robot_sensors/cameras/camera_calibration/calibration_data/: camera_b.yaml  stereo.yaml  stereo_maps.npz
robot_sensors/navx/src/: publisher.cpp
robot_simulation/: CMakeLists.txt  package.xml
robot_simulation/launch/: launch_visualization.launch
robot_simulation/rviz/: competition_config.rviz  path_tracking_sim.rviz
robot_simulation/scripts/: field_visualization.py  path_tracking_sim.py  test_map_publisher.py
robot_simulation/urdf/: robot_model.urdf
robot_slam/: CMakeLists.txt  package.xml
robot_slam/cfg/: Disparity.cfg
robot_slam/ekf/: ArucoEKF.py  ekf_test.m  ekf_test_data  robot_pose_ekf.py  testEKF.py
robot_slam/launch/: kinect.launch  test_ekf.launch  test_servo_cam.launch
robot_slam/localization/: aruco_camera_centering.py  aruco_localization.py  generateArucoBoard.py  odometry_publisher.py
robot_slam/obstacle_avoidance/: Field_Mapper.py  elevation_mapping.rviz  elevation_mapping_test.launch  find_drivability.py  global_elevation_map.py  local_map_publisher.py  test.py
robot_slam/obstacle_detection/: disparity_noise_filter.py
route_planning/: CMakeLists.txt  package.xml
route_planning/scripts/: route_planning_execution.py
sensor_integration/: CMakeLists.txt  package.xml
simulation_tools/: CMakeLists.txt  package.xml
simulation_tools/scripts/: path_tracking_sim.py
slam/: ArucoEKF.py  package.xml  testEKF.py  test_ekf.launch.xml
slam/launch/: test_ekf.launch
slam/scripts/: ArucoEKF.py  testEKF.py
src/: publisher.cpp  subscriber.cpp
tasks/: README
tasks/route_planning/: compute_difficult_path.py  compute_easy_path.py  compute_obs_region_endpoints.py  is_clear_path.m  (+1 more)
update_node/: CMakeLists.txt  package.xml  update_node.py
update_node/scripts/: update_node.py
vision/: CMakeLists.txt  ImageCompareTest.py  package.xml
(+98 files in other folders)
