<?xml version="1.0"?>
<package format="2">

  <!-- basic data -->
  <name>custom_msgs</name>
  <version>0.1.0</version>
  <description>Custom message types used for this project</description>

  <!-- maintainers -->
  <maintainer email="jacob.gloudemans@vanderbilt.edu">Jacob Gloudemans</maintainer>

  <!-- license information -->
  <license>MIT</license>

  <!-- urls -->
  <url type="website">https://github.com/vanderbiltrobotics/NASA-RMC-2018-2019</url>

  <!-- authors -->
  <author email="jacob.gloudemans@vanderbilt.edu">Jacob Gloudemans</author>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
