<?xml version="1.0"?>
<package format="2">

  <!-- basic data -->
  <name>mission_control</name>
  <version>0.1.0</version>
  <description>mission_control</description>

  <!-- maintainers -->
  <maintainer email="jacob.gloudemans@vanderbilt.edu">Jacob Gloudemans</maintainer>

  <!-- license information -->
  <license>MIT</license>

  <!-- urls -->
  <url type="website">https://github.com/vanderbiltrobotics/NASA-RMC-2018-2019</url>

  <!-- authors -->
  <author email="jacob.gloudemans@vanderbilt.edu">Jacob Gloudemans</author>
  <author email="jason.lao@vanderbilt.edu">Jason Lao</author>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
