<?xml version="1.0"?>
<package format="2">

  <!-- basic data -->
  <name>motor_control</name>
  <version>0.1.0</version>
  <description>Implementation of motor_control using CTRE Phoenix</description>

  <!-- maintainers -->
  <maintainer email="vanderbiltrobotics@gmail.com">Vanderbilt Robotics</maintainer>

  <!-- license information -->
  <license>MIT</license>

  <!-- urls -->
  <url type="website">https://github.com/vanderbiltrobotics/NASA-RMC-2018-2019</url>

  <!-- authors -->

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs></depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

