<?xml version="1.0"?>
<package format="2">

  <!-- basic data -->
  <name>robot_high_level_control</name>
  <version>1.0.0</version>
  <description>The robot_high_level_control package</description>

  <!-- maintainers -->
  <maintainer email="vanderbiltrobotics@gmail.com">Vanderbilt Robotics</maintainer>

  <!-- license information -->
  <license>MIT</license>

  <!-- urls -->
  <url type="website">https://github.com/vanderbiltrobotics/NASA-RMC-2018-2019</url>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

</package>
