<?xml version="1.0"?>
<package format="2">

  <!-- basic data -->
  <name>drive_system</name>
  <version>1.0.0</version>
  <description>The drive_system package</description>

  <!-- maintainers -->
  <maintainer email="vanderbiltrobotics@gmail.com">Vanderbilt Robotics</maintainer>

  <!-- license information -->
  <license>MIT</license>

  <!-- urls -->
  <url type="website">https://github.com/vanderbiltrobotics/NASA-RMC-2018-2019</url>

  <!-- authors -->
  <author email="jiaqi.li@vanderbilt.edu">Jiaqi Li</author>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
